--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
     "formik": "^2.2.9",
+    "modern-normalize": "^1.1.0",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
