--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
     "formik": "^2.2.9",
+    "lodash.debounce": "^4.0.8",
     "modern-normalize": "^1.1.0",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.3.0",
+    "react-loader-spinner": "^5.1.7-beta.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
